@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-17T16:17:34Z",
+  "timestamp" : "2024-05-21T01:05:18Z",
   "count_outdated" : 316,
   "uniques_outdated" : 113,
-  "count" : 321,
-  "uniques" : 115,
+  "count" : 322,
+  "uniques" : 116,
   "views" : [
     {
       "timestamp": "2024-05-16T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
