@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 2,
+  "count": 6,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2024-05-16T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
